2006-06-24  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c, config.c, ptp-private.h, Makefile.am:
	
	  Split out configuration handling into new file config.c

2006-06-16  Hubert Figuiere  <hub@figuiere.net>

	* library.c: 30D has DCIM ROOT bug

2006-06-13  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.{ch}: Updated MTP defines from libmtp.

2006-06-01  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added new USB ids for:
	  Canon PowerShot A540, A530, S3 IS, SD700, IXUS 800, IXUS 60,
	  iRiver T20 FM
	  Dell Pocket DJ
	  Nikon Coolpix L4, L3
	  Kodak Easyshare Z740
	  Sony DSC-U10
	  Leica D-LUX 2
	  JVC Alneo XA-HD500

2006-04-27  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c: The iRiver devices occasionaly send a byte more than
	  we requested which could lead to memory corruption due to 
	  logic that did not expect that.

	* library.c: Replaced fprintf by gp_log in parse_metadata.

2006-04-17  Marcus Meissner  <marcus@jet.franken.de>
	
	* ptp.c, library.c: Added several more Nikon DSLR config options.
	* library.c: Prepare handling Burst mode on the Nikon DSLRs,
	  (I just need to know the Object ID sequence generated).

	* library.c: Added METADATA retrieval and setting for MTP devices.

2006-04-12  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added PowerShot A700 as reported.

2006-04-04  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Nikon D200, as reported by Jana Jaeger.

2006-04-02  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added lots of Nikon configure options.

2006-03-28  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added EOS 30D as reported on SF.

	* library.c: Enhance about text a bit. Explain
	  that we are not a Licensed MTP Implementation,
	  but are fully able and willing to serve MTP
	  devices.

2006-03-26  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Handle mp3 mime type correctly.
		New devices (copied from libmtp).
		Better "bad folder" errormessage.
